@@ -89,6 +89,16 @@ public final class UploadUtility {
      * Converts given number of bytes to a human readable format.
      *
      * @param size The number of bytes
+     * @return The number of bytes in a human readable format
+     */
+    public static String getSize(final long size) {
+        return getSize(size, 2, false, true);
+    }
+
+    /**
+     * Converts given number of bytes to a human readable format.
+     *
+     * @param size The number of bytes
      * @param precision The number of digits allowed after dot
      * @param longName <code>true</code> to use unit's long name (e.g. <code>Megabytes</code>) or short name (e.g. <code>MB</code>)
      * @param realSize <code>true</code> to bytes' real size of <code>1024</code> used for detecting proper unit; otherwise
